# llama.cpp

./: .gitignore  Makefile  main.py  main_server.py  pyproject.toml
LLaMAServer/: __init__.py  test_ws.py
PyLLaMA/: PyLLaMA.py  __init__.py
chat-llama/: package-lock.json  package.json
chat-llama/src/: App.tsx
chat-llama/src/components/: AppBar.tsx  AppBarHeader.tsx  Chat.tsx  Discussion.tsx  TextInput.tsx
chat-llama/src/constants/: TextInput.ts  Types.ts
chat-llama/src/context/: AppContext.tsx
chat-llama/src/services/: Websocket.ts
examples/main/: main.cpp
lib_llama/: __init__.py  c_types.py  lib_llama.py
