[tool.poetry]
name = "llama-server"
version = "0.1.0"
description = ""
authors = ["Alexis Craye <alexis.craye@rideyego.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
torch = "^2.0.0"
numpy = "^1.24.2"
sentencepiece = "^0.1.97"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
